# tsunami-simulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  environment.yml
.github/workflows/: cmake.yml
examples/: plot_solution.py
src/: CMakeLists.txt  tsunami.f90
src/diff/: CMakeLists.txt  mod_diff.f90
src/initial/: CMakeLists.txt  mod_initial.f90
src/io/: CMakeLists.txt  io.f90  mod_io.f90
tools/: build.sh  configure.sh  run.sh
